# NoisiaX

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  noisiax_design_full.md
cmake/: NoisiaXConfig.cmake.in
include/noisiax/: noisiax.hpp
include/noisiax/compiler/: scenario_compiler.hpp
include/noisiax/engine/: agent_runtime.hpp  simulation_engine.hpp  typed_runtime.hpp
include/noisiax/experiment/: experiment.hpp
include/noisiax/extensions/: acme_market_extension.hpp  civic_resilience_extension.hpp  default_registry.hpp  diagnostics.hpp  expression_registry.hpp  extension_api.hpp  extension_registry.hpp  metric_registry.hpp  propagation_registry.hpp  semver.hpp  symbol_id.hpp
include/noisiax/scheduler/: event_scheduler.hpp
include/noisiax/schema/: scenario_schema.hpp
include/noisiax/serialization/: yaml_serializer.hpp
include/noisiax/validation/: scenario_validator.hpp
ncore/build_ctest_root_tmp/Testing/Temporary/: CTestCostData.txt
ncore/build_legacy/: CTestTestfile.cmake  DartConfiguration.tcl  NoisiaXConfig.cmake
ncore/build_legacy/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmpb8fbe
ncore/build_legacy/scenarios/: README.md  project_civic_resilience.md  project_civic_resilience_governance.yaml  project_civic_resilience_infrastructure.yaml  project_civic_resilience_population.yaml  project_civic_resilience_v5.yaml  v2_social_influence.yaml  v3_particle_motion.yaml  v3_seeded_branching.yaml  v4_circular_a.yaml  v4_duplicate_ids_base.yaml  v4_duplicate_ids_fragment_b.yaml  v5_acme_market_authoring.yaml  v5_acme_market_expr.yaml
ncore/build_legacy/test_output_v5/exp_metric_a/: default_run_0_seed_1.json
ncore/build_legacy/test_output_v5/exp_metric_b/: experiment_manifest.json
ncore/build_legacy/v4_experiment_output/: experiment_manifest.json  summary.json
ncore/build_rootcache/: DartConfiguration.tcl  cmake_install.cmake  resolved_v4_composition.yaml
ncore/build_rootcache/Testing/Temporary/: CTestCostData.txt
ncore/build_rootcache/scenarios/: happy_path.yaml  large_chain_stress.yaml  project_civic_resilience.md  v2_minimal_purchase.yaml  v2_queue_capacity.yaml  v3_invalid_write_undeclared_field.yaml  v3_max_events_limit.yaml  v3_relation_decay.yaml  v4_circular_b.yaml  v4_composition_base.yaml  v5_experiment_acme_metric.yaml
ncore/build_rootcache/test_output_v5/exp_metric_b/: summary.json
ncore/build_rootcache/v4_experiment_output/: default_run_0_seed_1.json  default_run_1_seed_2.json  default_run_2_seed_3.json
ncore/scenarios/: README.md  failure_cycle.yaml  internet_information_spread.yaml  market_butterfly_v2.yaml  project_civic_resilience_experiment_v4_v5.yaml  v2_budget_stock_pressure.yaml  v2_invalid_agent_layer_reference.yaml  v2_max_events_limit.yaml  v3_atom_bonding.yaml  v3_complex_rumor_spread.yaml  v3_invalid_both_layers.yaml  v3_invalid_field_type_mismatch.yaml  v3_invalid_unknown_component.yaml  v3_relation_bound_violation.yaml  v3_small_town_internet_100p_90d.yaml  v4_composition_fragment_a.yaml  v4_composition_fragment_b.yaml  v4_duplicate_ids_fragment_a.yaml  v4_experiment_basic.yaml  v4_rng_value.yaml
ncore/tools/: generate_project_civic_resilience_scenario.js  generate_small_town_internet_scenario.js
plans/: PLAN_v1.md  PLAN_v2.md  PLAN_v3.md  PLAN_v4.md  PLAN_v5.md
scenarios/: README.md  v3_event_emission.yaml
src/: noisiax.cpp  noisiax_cli.cpp
src/compiler/: scenario_compiler.cpp
src/engine/: agent_runtime.cpp  simulation_engine.cpp  typed_runtime.cpp
src/experiment/: experiment_runner.cpp  scenario_resolver.cpp
src/extensions/: acme_market_extension.cpp  civic_resilience_extension.cpp  default_registry.cpp
src/scheduler/: event_scheduler.cpp
src/serialization/: yaml_serializer.cpp
src/validation/: scenario_validator.cpp
tests/: test_noisiax.cpp
